--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ button:focus {
 }
 *:focus {
   box-shadow: none !important;
+  outline: none !important;
 }
 
 /************* CALENDAR **************/
