--- a/src/index.css
+++ b/src/index.css
@@ -83,15 +83,41 @@ button:focus {
   justify-content: space-between;
 }
 
-.btn-select-view .active{
-  background-color: #FF7C02;
-  box-shadow: 0px 0px 10px black inset;
-  color: #fcfcfc !important;
+.rbc-btn-group.btn-select-view{
+  border: 2px solid rgba(115, 122, 135, 0.5) !important;
+  border-radius: 10px !important;
+  padding: 0px !important;
+  overflow: hidden !important;
 }
-.btn-select-view .active:focus {
-  background-color: #FF7C02 !important;
-  box-shadow: 0px 0px 10px black inset !important;
-  color: #fcfcfc !important;
+
+.btn-hoy{
+  border: 2px solid rgba(115, 122, 135, 0.5) !important;
+  border-radius: 10px !important;
+}
+
+.rbc-btn-group button{
+  border: none !important;
+  margin: 0px !important;
+}
+
+.rbc-btn-group button.btn-mes{
+  border-radius: 8px 0px 0px 8px !important;
+}
+.rbc-btn-group button.btn-agenda{
+  border-radius: 0px 8px 8px 0px !important;
+}
+
+.rbc-btn-group button.btn-dia,.rbc-btn-group button.btn-semana,.rbc-btn-group button.btn-mes{
+  border-right: 2px solid rgba(115, 122, 135, 0.5) !important;
+}
+
+.btn-select-view .active{
+  background: #749FF2 !important;
+  color: white !important;
+}
+.btn-select-view button:hover {
+  background: #0258FF !important;
+  color: white !important;
 }
 
 .toolbar-left span, .toolbar-left p{
