--- a/src/index.css
+++ b/src/index.css
@@ -92,20 +92,33 @@ button:focus {
 }
 
 .rbc-btn-group.btn-select-view{
-  border: 2px solid rgba(115, 122, 135) !important;
+  /* border: 2px solid rgba(115, 122, 135) !important; */
+  
   border-radius: 10px !important;
   padding: 0px !important;
-  overflow: hidden !important;
+  /* overflow: hidden !important; */
 }
 
 .btn-hoy{
-  border: 2px solid rgba(115, 122, 135) !important;
+  /* border: 2px solid rgba(115, 122, 135) !important; */
+  background: white !important;
   border-radius: 10px !important;
+  border: none !important;
+  box-shadow: 0px 4px 10px rgb(202, 202, 202);
+}
+
+.btn-mes,.btn-semana,.btn-dia,.btn-agenda{
+  background: white !important;
+  box-shadow: 0px 4px 10px rgb(202, 202, 202);
+}
+
+button.btn-mes,button.btn-semana,button.btn-dia{
+  margin-right: 7px !important;
 }
 
 .rbc-btn-group button{
   border: none !important;
-  margin: 0px !important;
+  /* margin: 0px !important; */
 }
 
 .rbc-btn-group button.btn-mes{
@@ -116,7 +129,7 @@ button:focus {
 }
 
 .rbc-btn-group button.btn-dia,.rbc-btn-group button.btn-semana,.rbc-btn-group button.btn-mes{
-  border-right: 2px solid rgba(115, 122, 135) !important;
+  /* border-right: 2px solid rgba(115, 122, 135) !important; */
 }
 
 .btn-select-view .active{
@@ -170,8 +183,8 @@ button:focus {
   /* fill: white !important; */
 }
 
-.css-whqy0f[aria-checked=true], .css-whqy0f[data-checked] {
+/* .css-whqy0f[aria-checked=true], .css-whqy0f[data-checked] {
   background: #42C74F !important;
   border-color: #42C74F !important;
   color: white !important;
-}
+} */
